<resources>
    <string name="app_name">LibHelper</string>
    <string name="pref_title_stick_container">Stick layer to</string>
    <string name="pref_title_transformer">Transformer</string>
    <string name="pref_title_enable_preview_mode">Enable preview mode</string>
    <string name="pref_title_show_shadow">Show shadow</string>
    <string name="pref_title_show_offset">Closed offset</string>
    <string name="open_button_container">Open</string>
    <string name="close_button_container">Close</string>
    <string name="swipe_label">Swipe!</string>
    <string name="swipe_left_label">Swipe left!</string>
    <string name="swipe_right_label">Swipe right!</string>
    <string name="swipe_up_label">Swipe up!</string>
    <string name="swipe_down_label">Swipe down!</string>
    <string name="label_right">Right</string>
    <string name="label_left">Left</string>
    <string name="label_top">Top</string>
    <string name="label_bottom">Bottom</string>
    <string name="label_none">None</string>
    <string name="label_alpha">Alpha</string>
    <string name="label_rotation">Rotation</string>
    <string name="label_slide_joy">Slide Joy!</string>
    <string name="not_applicable">n/a</string>
    <string-array name="pref_list_titles">
        <item>@string/label_right</item>
        <item>@string/label_left</item>
        <item>@string/label_top</item>
        <item>@string/label_bottom</item>
    </string-array>
    <string-array name="pref_list_values">
        <item>right</item>
        <item>left</item>
        <item>top</item>
        <item>bottom</item>
    </string-array>
    <string-array name="pref_transform_list_titles">
        <item>@string/label_none</item>
        <item>@string/label_alpha</item>
        <item>@string/label_rotation</item>
        <item>@string/label_slide_joy</item>
    </string-array>
    <string-array name="pref_transform_list_values">
        <item>none</item>
        <item>alpha</item>
        <item>rotation</item>
        <item>slide</item>
    </string-array>
    <string name="pref_go">Go!</string>
    <string name="share">Share</string>
    <string name="list_button">List</string>
    <string name="grid_button">Grid</string>
    <string name="intent_picker">Intent Picker</string>
    <string name="menu_resource">Inflating a Menu</string>
    <string name="document">Document</string>
    <string name="spreadsheet">Spreadsheet</string>
    <string name="folder">Folder</string>
    <string name="upload_photos">Upload photos or videos</string>
    <string name="use_camera">Use camera</string>
    <string name="share_some_text">Share some text!</string>
    <string name="dialog_title">Dialog setup:</string>
    <string name="footer">Footer</string>
    <string name="header">Header</string>
    <string name="header_title">Your title</string>
    <string name="header_sample">SAMPLE HEADER</string>
    <string name="footer_button_close">CLOSE</string>
    <string name="footer_button_confirm">CONFIRM</string>
    <string name="footer_sample">SAMPLE FOOTER</string>
    <string name="button_bottom">Bottom</string>
    <string name="button_center">Center</string>
    <string name="button_top">Top</string>
    <string name="google_plus_title">Google Plus</string>
    <string name="google_maps_title">Maps</string>
    <string name="google_messenger_title">Messenger</string>
    <string name="question">Do you like Dialog Plus?</string>
    <string name="button_like">I like it</string>
    <string name="button_love">I love it</string>
    <string name="view_holder">View Holder</string>
    <string name="list_holder">List Holder</string>
    <string name="grid_holder">Grid Holder</string>
    <string name="show_header">Show header</string>
    <string name="show_footer">Show footer</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Fireworks</string>
    <string name="automaticFireworks">Enable automatic fireworks</string>
    <string name="adjustFrequency">Adjust launch frequency</string>
    <string name="detectGravity">Gravity response</string>
    <string name="playSounds">Play sounds</string>
    <string name="credits">Credits</string>
    <string name="menuSettings">Settings</string>
    <string name="menuSettingsSave">Save</string>
    <string name="menuSettingsCancel">Cancel</string>
    <string name="menuCredits">Credits</string>
    <string name="creditsOK">Awesome!</string>
    <string name="menuCreditsText">&lt;h2&gt;Programmers&lt;/h2&gt;&lt;ul&gt;&lt;li&gt;Rob Goodfellowe&lt;/li&gt;&lt;li&gt;Corey Pennycuff&lt;/li&gt;&lt;/ul&gt;&lt;h2&gt;Fireworks Alpha Transparency Idea&lt;/h2&gt;&lt;dl&gt;&lt;dt&gt;&lt;b&gt;Paul Lewis&lt;/b&gt;&lt;/dt&gt;&lt;dd&gt;http://creativejs.com/tutorials/creating-fireworks/&lt;/dd&gt;&lt;/dl&gt;&lt;h2&gt;Sounds&lt;/h2&gt;&lt;dl&gt;&lt;dt&gt;&lt;b&gt;Explosions&lt;/b&gt;&lt;/dt&gt;&lt;dd&gt;http://www.freesound.org/people/Robinhood76/sounds/65731/&lt;/br&gt;http://www.freesound.org/people/Robinhood76/sounds/87529/&lt;/dd&gt;&lt;/dl&gt;&lt;h2&gt;Music&lt;/h2&gt;&lt;p&gt;All music provided by the US Marine Corps Band&lt;/p&gt;&lt;dl&gt;&lt;dt&gt;&lt;b&gt;The Star Spangled Banner&lt;/b&gt;&lt;/dt&gt;&lt;dd&gt;by Francis Scott Key&lt;/dd&gt;&lt;dt&gt;&lt;dt&gt;&lt;b&gt;The Thunderer&lt;/b&gt;&lt;/dt&gt;&lt;dd&gt;by John Philip Sousa&lt;/dd&gt;&lt;dt&gt;&lt;b&gt;The Washington Post&lt;/b&gt;&lt;/dt&gt;&lt;dd&gt;by John Philip Sousa&lt;/dd&gt;&lt;dt&gt;&lt;b&gt;The Stars and Stripes Forever&lt;/b&gt;&lt;/dt&gt;&lt;dd&gt;by John Philip Sousa&lt;/dd&gt;&lt;/dl&gt;</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="basic_animations">Basic Animations</string>
    <string name="wowo_translation_animation">Translation Animation</string>
    <string name="wowo_scale_animation">Scale Animation</string>
    <string name="wowo_alpha_animation">Alpha Animation</string>
    <string name="wowo_rotation_animation">Rotation Animation</string>
    <string name="font_size_animations">Font Size Animations</string>
    <string name="wowo_textview_textsize_animation">TextView TextSize Animation</string>
    <string name="color_animations">Color Animations</string>
    <string name="wowo_drawable_color_animation">Shape Color Animation</string>
    <string name="wowo_textview_color_animation">TextView Color Animation</string>
    <string name="wowo_background_color_animation">Background Color Animation</string>
    <string name="wowo_layer_list_color_animation">Layer-List Color Animation</string>
    <string name="wowo_state_list_color_animation">State-List Color Animation</string>
    <string name="path_animations">Path Animations</string>
    <string name="wowo_path_animation">Path Animation</string>
    <string name="example">Examples</string>
    <string name="app_intro_example">APP Intro Example</string>
    <string name="cv_example">CV Example</string>
    <string name="nightonke">NIGHTONKE</string>
    <string name="presents">presents</string>
    <string name="wowo">WoWo</string>
    <string name="viewpager">ViewPager</string>
    <string name="optimized">Optimized for scrolling app intros.</string>
    <string name="free">Free and open source.</string>
    <string name="cv">CV</string>
    <string name="for_android_developer">4 Android Developer</string>
    <string name="name">Weiping HUANG</string>
    <string name="university_text">Full-time the junior in SYSU</string>
    <string name="mail_text">Nightonke@outlook.com</string>
    <string name="projects">Projects:</string>
    <string name="braeco">BraecoWaiter</string>
    <string name="braeco_more">Intelligent Restaurant Management Platform</string>
    <string name="cocoin">CoCoin</string>
    <string name="cocoin_more">Multi-view Accounting Application</string>
    <string name="leeco">LeeCo</string>
    <string name="leeco_more">Awesome App for Problems, Solutions, Discuss(from Leetcode) and Comments.</string>
    <string name="for_more">For more:</string>
</resources>