<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".ActivityExample.WoWoViewPagerExample.WoWoViewPagerActivityExample">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/basic_animations"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:gravity="center_vertical"
            />

        <Button
            android:id="@+id/wowo_translation_animation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wowo_translation_animation"
            />

        <Button
            android:id="@+id/wowo_scale_animation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wowo_scale_animation"
            />

        <Button
            android:id="@+id/wowo_alpha_animation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wowo_alpha_animation"
            />

        <Button
            android:id="@+id/wowo_rotation_animation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wowo_rotation_animation"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/font_size_animations"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:gravity="center_vertical"
            />

        <Button
            android:id="@+id/wowo_textview_textsize_animation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wowo_textview_textsize_animation"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/color_animations"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:gravity="center_vertical"
            />

        <Button
            android:id="@+id/wowo_background_color_animation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wowo_background_color_animation"
            />

        <Button
            android:id="@+id/wowo_textview_color_animation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wowo_textview_color_animation"
            />

        <Button
            android:id="@+id/wowo_drawable_color_animation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wowo_drawable_color_animation"
            />

        <Button
            android:id="@+id/wowo_state_list_color_animation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wowo_state_list_color_animation"
            />

        <Button
            android:id="@+id/wowo_layer_list_color_animation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wowo_layer_list_color_animation"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/path_animations"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:gravity="center_vertical"
            />

        <Button
            android:id="@+id/wowo_path_animation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wowo_path_animation"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/example"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:gravity="center_vertical"
            />

        <Button
            android:id="@+id/app_intro_example"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_intro_example"
            />

        <Button
            android:id="@+id/cv_example"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cv_example"
            />

    </LinearLayout>

</ScrollView>
