<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/base"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".ActivityExample.WoWoViewPagerExample.CVExampleActivity">

    <UIHelper.ViewPagerAnimation.WoWoViewPager
        android:id="@+id/wowo_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <View
        android:id="@+id/circle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:background="@drawable/background_pink_blue_circle"
        />

    <RelativeLayout
        android:id="@+id/sub_base"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        >

        <ImageView
            android:id="@+id/cv_logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/cv_logo"
            android:layout_centerInParent="true"
            android:background="@drawable/background_shape_cv_logo"
            />

        <TextView
            android:id="@+id/cv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="100dp"
            android:paddingStart="100dp"
            android:gravity="center"
            android:text="@string/cv"
            android:textColor="@color/my_pink"
            android:textSize="80sp"
            android:textStyle="bold"
            android:layout_marginTop="90dp"
            />

        <TextView
            android:id="@+id/for_android_developer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/for_android_developer"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold"
            android:layout_below="@+id/cv"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:id="@+id/name"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="30sp"
            android:text="@string/name"
            android:layout_below="@+id/cv_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center"
            />

        <ImageView
            android:id="@+id/university_icon"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:src="@drawable/university"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="20dp"
            />

        <TextView
            android:id="@+id/university_text"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:text="@string/university_text"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:gravity="center_vertical|left"
            android:layout_toRightOf="@+id/university_icon"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            />

        <ImageView
            android:id="@+id/mail_icon"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:src="@drawable/mail"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="60dp"
            />

        <TextView
            android:id="@+id/mail_text"
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:text="@string/mail_text"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:gravity="center_vertical|left"
            android:layout_toRightOf="@+id/university_icon"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="60dp"
            />

        <TextView
            android:id="@+id/projects"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/projects"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:paddingLeft="40dp"
            android:paddingStart="40dp"
            android:paddingBottom="30dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200dp"
            />

        <TextView
            android:id="@+id/braeco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/braeco"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:paddingLeft="60dp"
            android:paddingStart="60dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/projects"
            />

        <TextView
            android:id="@+id/braeco_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/braeco_more"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:paddingLeft="60dp"
            android:paddingStart="60dp"
            android:layout_centerInParent="true"
            android:layout_below="@+id/braeco"
            />

        <TextView
            android:id="@+id/cocoin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cocoin"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:paddingLeft="60dp"
            android:paddingStart="60dp"
            android:layout_centerInParent="true"
            android:layout_below="@+id/braeco_more"
            android:layout_marginTop="50dp"
            />

        <TextView
            android:id="@+id/cocoin_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cocoin_more"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:paddingLeft="60dp"
            android:paddingStart="60dp"
            android:layout_centerInParent="true"
            android:layout_below="@+id/cocoin"
            />

        <TextView
            android:id="@+id/leeco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/leeco"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:paddingLeft="60dp"
            android:paddingStart="60dp"
            android:layout_centerInParent="true"
            android:layout_below="@+id/cocoin_more"
            android:layout_marginTop="50dp"
            />

        <TextView
            android:id="@+id/leeco_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/leeco_more"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:paddingLeft="60dp"
            android:paddingStart="60dp"
            android:layout_centerInParent="true"
            android:layout_below="@+id/leeco"
            />

        <com.nightonke.wowoviewpager.WoWoPathView
            android:id="@+id/pathview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            app:pathColor="@color/white"
            app:pathWidth="5"
            app:headImageId="@drawable/airplane"
            app:headImageWidth="240"
            />

        <LinearLayout
            android:id="@+id/blog_and_github"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/for_more"
                android:paddingLeft="40dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                />

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
